# AIM_Helper

./: .gitignore  CMakeLists.txt  DEPENDENCIES.md  DRIVER_EXTENSION.md  InputSimulator.hpp  README.md  main.cpp
backend/: README.md
backend/src/aim/: AimAssistant.cpp  AimFilters.cpp
backend/src/aim/aim_assistant_parts/: Lifecycle.inc  RunLoop.inc  State.inc
backend/src/aim/assistant_parts/: AimMovement.inc  AimSampleLogging.inc  AutoTrigger.inc  CrosshairTracking.inc  RuntimeConfig.inc  TargetSelection.inc  TelemetryVisualization.inc
backend/src/aim/assistant_parts/aim_movement_parts/: AimFiltering.inc  AimInputHandling.inc  AimMappingAndTelemetry.inc  AimStateReset.inc  MouseDelta.inc  VisualMoveCoalescing.inc
backend/src/aim/assistant_parts/aim_sample_logging_parts/: LogFileLifecycle.inc  SampleFrameWriter.inc  SettingsSnapshot.inc
backend/src/aim/assistant_parts/auto_trigger_parts/: AutoStopKeys.inc  AutoTriggerFlow.inc  AutoTriggerState.inc  HoldMode.inc  TargetAlignment.inc
backend/src/aim/assistant_parts/crosshair_tracking_parts/: ColorBlockDetection.inc  CrosshairState.inc  CrosshairUpdate.inc  Geometry.inc
backend/src/aim/assistant_parts/runtime_config_parts/: LiveConfigApply.inc  LiveConfigPolling.inc  StartupInstructions.inc  ValidationAndReload.inc
backend/src/aim/assistant_parts/runtime_config_parts/live_config_apply_parts/: ApplyLiveConfigEntry.inc  ChangeDetection.inc  CommitAndLogging.inc  ReadLiveConfigSnapshot.inc  RuntimeReloads.inc
backend/src/aim/assistant_parts/target_selection_parts/: BestTargetSelection.inc  EntityGrouping.inc  LockContinuity.inc  PartLocking.inc
backend/src/capture/: ScreenCapture.cpp
backend/src/capture/capture_parts/: DirectFrameSource.inc  FrameSourceBase.inc  FrameSourceFactory.inc  LatestFrameSource.inc  ScreenCapturer.inc
backend/src/capture/capture_parts/screen_capturer_parts/: CenterCropRegion.inc  OutputSelection.inc  PublicApi.inc  State.inc
backend/src/core/: Pch.h  Types.h
backend/src/detection/: ObjectDetector.cpp
backend/src/detection/object_detector_parts/: PublicApi.inc  State.inc
backend/src/input/: InputBackends.cpp
backend/src/input/input_parts/: DriverBackend.inc  MouseController.inc  SendInputBackend.inc
backend/src/input/input_parts/driver_backend_parts/: AbiBinding.inc  AbiTypes.inc  ButtonAndKeyHelpers.inc  LoggingAndCleanup.inc  PublicApi.inc  State.inc
backend/src/input/input_parts/mouse_controller_parts/: HumanizedMovement.inc  PublicApi.inc  State.inc
driver/: DriverBridgeABI.h
frontend/: app.js  index.html  styles.css
host/: AIM_Helper.Host.csproj  BackendRuntime.cs  ConfigJson.cs  DependencyChecks.cs  DependencyDownloads.cs  DriverManagement.cs  MainForm.cs  ModelManagement.cs  Program.cs  app.manifest
